# lightsapp-cli

./: Cargo.toml  README.md  run.sh
docs/: setting_1.txt
examples/: get_gatt_services.rs
src/: main.rs
