[package]
name = "ble_lights"
version = "0.1.0"
authors = ["Mikołaj Chwalisz <m.chwalisz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumble = { git = "https://github.com/mwylde/rumble", branch = "master"}
rand = "0.7.2"

[build.env]
passthrough = [
    "RUST_BACKTRACE",
    "RUST_LOG",
    "RUST_DEBUG",
]
